# metcalcs

./: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  environment.yml  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  metcalcs.rst  modules.rst  requirements.txt  usage.rst
src/metcalcs/: __init__.py  canopy.py  cli.py  constants.py  evaporation.py  radiation.py  thermo.py  validators.py
tests/: __init__.py  test_canopy.py  test_evaporation.py  test_metcalcs.py  test_radiation.py  test_thermo.py  test_validators.py
