[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metcalcs"
version = "0.1.0"
description = "meteorological package to check output from weather stations"
readme = "README.rst"
authors = [
  {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}
]
maintainers = [
  {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}
]
requires-python = ">=3.8"
keywords = [
  "meteorology",
  "weather",
  "climate",
  "data quality",
  "quality control",
  "qc",
  "data processing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",

]
license = {text = "MIT license"}
dependencies = [
  "numpy",
  "pandas",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/inkenbrandt/metcalcs/issues"
changelog = "https://github.com/inkenbrandt/metcalcs/blob/master/changelog.md"
homepage = "https://github.com/inkenbrandt/metcalcs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.sphinx]
builder = "html"
source-dir = "docs"
build-dir = "docs/_build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

